Change to Windows GUI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=OpenCV_SpringBoot
 output.embedded.image.folder=D:\\Tan\\Sample_Data\\Embedded_Image
 init.current.directory.file.chooser=D:\\Tan\\Sample_Data\\
+ui.look.and.feel=com.sun.java.swing.plaf.windows.WindowsLookAndFeel
