Refactor code thermal project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=OpenCV_SpringBoot
-output.embedded.image.folder=D:\\Tan\\Sample_Data\\Embedded_Image
+output.root.embedded.file.folder=D:\\Tan\\Sample_Data\\Embedded_Image
+output.metadata.folder=D:\\Tan\\Sample_Data\\Embedded_Image\\Metadata
+output.embedded.image.folder=D:\\Tan\\Sample_Data\\Embedded_Image\\Embedded
+output.vision.image.folder=D:\\Tan\\Sample_Data\\Embedded_Image\\Vision
+output.raw.thermal.image.folder=D:\\Tan\\Sample_Data\\Embedded_Image\\Raw_Thermal
 init.current.directory.file.chooser=D:\\Tan\\Sample_Data\\
 ui.look.and.feel=com.sun.java.swing.plaf.windows.WindowsLookAndFeel
